feat: Enhance AI generated mindmaps with visual flair
Improves the visual appeal and clarity of AI-generated study plan mindmaps.
This includes:
- Implementing a new 'graph LR' (Left to Right) Mermaid.js layout.
- Adding emoji to nodes for quick identification.
- Applying vibrant color schemes and styling to nodes for better visual hierarchy.
- Fine-tuning Mermaid.js theme variables and layout parameters for a cleaner, more engaging display.
- Enhancing the surrounding container with gradients and subtle background patterns for a polished look.

--- a/index.html
+++ b/index.html
@@ -44,13 +44,23 @@
             startOnLoad: false, 
             theme: 'base',
             securityLevel: 'loose',
+            fontFamily: '"Be Vietnam Pro", sans-serif',
+            flowchart: {
+              curve: 'basis',
+              padding: 20,
+              nodeSpacing: 50,
+              rankSpacing: 50,
+              htmlLabels: true
+            },
             themeVariables: {
-              primaryColor: '#e0e7ff',
+              primaryColor: '#818cf8',
               primaryTextColor: '#1e293b',
-              primaryBorderColor: '#818cf8',
-              lineColor: '#6366f1',
+              primaryBorderColor: '#6366f1',
+              lineColor: '#cbd5e1',
               secondaryColor: '#f0fdf4',
-              tertiaryColor: '#fff1f2'
+              tertiaryColor: '#fff1f2',
+              fontFamily: '"Be Vietnam Pro", sans-serif',
+              fontSize: '16px'
             }
           });
         }
@@ -162,7 +172,7 @@
         background: transparent !important;
         display: flex;
         justify-content: center;
-        margin: 20px 0;
+        margin: 0 !important;
         font-family: 'Be Vietnam Pro', sans-serif !important;
       }
       
