--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
     "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
     "vite": "https://aistudiocdn.com/vite@^7.2.7",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.2",
-    "openai": "https://aistudiocdn.com/openai@^6.10.0"
+    "openai": "https://aistudiocdn.com/openai@^6.10.0",
+    "react-dom": "https://esm.sh/react-dom@^19.2.3"
   }
 }
 </script>
